--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,38 +1,70 @@
 {
-    "C_Cpp.inlayHints.parameterNames.enabled": true,
-    "cmake.configureOnOpen": true,
-    "files.associations": {
-        ".fantomasignore": "ignore",
-        "*.embeddedhtml": "html",
-        "tools.h": "c",
-        "vlc.h": "c",
-        "libvlc_renderer_discoverer.h": "c",
-        "libvlc_media.h": "c",
-        "libvlc_media_library.h": "c",
-        "libvlc_dialog.h": "c",
-        "libvlc_vlm.h": "c",
-        "windows.h": "c",
-        "*.rh": "c",
-        "json.h": "c",
-        "connections.h": "c",
-        "string.h": "c",
-        "mfapi.h": "c",
-        "commctrl.h": "c",
-        "tchar.h": "c",
-        "process.h": "c",
-        "mferror.h": "c",
-        "dshow.h": "c",
-        "windowsx.h": "c",
-        "stdio.h": "c",
-        "wmcreate.h": "c",
-        "wininet.h": "c",
-        "connections_prexp.h": "c",
-        "lang_en.h": "c",
-        "file.h": "c",
-        "specstrings.h": "c",
-        "_mingw_unicode.h": "c",
-        "pshpack4.h": "c",
-        "const.h": "c",
-        "main.h": "c"
-    }
+  "C_Cpp.inlayHints.parameterNames.enabled": true,
+  "cmake.configureOnOpen": true,
+  "files.associations": {
+    ".fantomasignore": "ignore",
+    "*.embeddedhtml": "html",
+    "tools.h": "c",
+    "vlc.h": "c",
+    "libvlc_renderer_discoverer.h": "c",
+    "libvlc_media.h": "c",
+    "libvlc_media_library.h": "c",
+    "libvlc_dialog.h": "c",
+    "libvlc_vlm.h": "c",
+    "windows.h": "c",
+    "*.rh": "c",
+    "json.h": "c",
+    "connections.h": "c",
+    "string.h": "c",
+    "mfapi.h": "c",
+    "commctrl.h": "c",
+    "tchar.h": "c",
+    "process.h": "c",
+    "mferror.h": "c",
+    "dshow.h": "c",
+    "windowsx.h": "c",
+    "stdio.h": "c",
+    "wmcreate.h": "c",
+    "wininet.h": "c",
+    "connections_prexp.h": "c",
+    "lang_en.h": "c",
+    "file.h": "c",
+    "specstrings.h": "c",
+    "_mingw_unicode.h": "c",
+    "pshpack4.h": "c",
+    "const.h": "c",
+    "main.h": "c"
+  },
+  "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+    "clang-diagnostic-error"
+  ],
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ]
 }
