--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,8 @@
     "pshpack4.h": "c",
     "const.h": "c",
     "main.h": "c",
-    "stb_image.h": "c"
+    "stb_image.h": "c",
+    "types.h": "c"
   },
   "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
     "clang-diagnostic-error"
