Makefile compilation support

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@ a.jpg
 kanon-2006.jpg
 connections.exe
 tests.exe
+dango.exe
+
+debug_dango.exe
+dango.exe
+connections.o
+file.o
+json.o
+main.o
+provider.o
+video.o
+wmcreate.o
