--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,11 @@
       "cwd": "c:\\Users\\ricol03\\Documents\\Project Miru-win32",
       "binaryPath": "c:\\Users\\ricol03\\Documents\\Project Miru-win32\\dango.exe",
       "binaryArgs": []
+    },
+    {
+      "cwd": "c:\\Users\\ricol03\\Documents\\Project Miru-win32",
+      "binaryPath": "c:\\Users\\ricol03\\Documents\\Project Miru-win32\\debug_dango.exe",
+      "binaryArgs": []
     }
   ]
 }
